# pigeon

./: CMakeLists.txt  README.md  pg.h
core/: global.cc  poll.cc  sock.h
utils/: exception.h  likely.h
